fix the msg time wrap css

--- a/web/css/chat-room.css
+++ b/web/css/chat-room.css
@@ -115,6 +115,7 @@
     bottom: -15px;
     color: rgba(255, 255, 255, 0.5);
     font-size: 10px;
+    white-space: nowrap;
 }
 
 .chat-room .msg_time_send {
